Fix log, java 17 and improve word average calculator